[components] Design/bugfixes (#519)
* [components] Spacing in fullscreen dialog

* [components] No extra padding on defaultpane content

* [components] No border in the ends of list items

* [form-builder] Blur events on reference input

* [components] Using non-svg for placeholder

--- a/packages/@sanity/components/src/dialogs/styles/FullscreenDialog.css
+++ b/packages/@sanity/components/src/dialogs/styles/FullscreenDialog.css
@@ -73,8 +73,12 @@
   display: none;
 }
 
-.actions {
+.actionsWrapper {
   padding-top: 2em;
+}
+
+.actions {
+  composes: buttonsCollection from 'part:@sanity/base/theme/typography/forms-style';
 }
 
 .closeButton {
